--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,22 +3,24 @@
           package="com.example.rebuy">
 
     <application
+        android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".business.main.MainActivity">
         </activity>
-        <activity android:name=".business.account.SplashActivity">
+        <activity android:name=".business.account.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".business.account.LoginActivity">
+        <activity android:name=".business.account.activity.LoginActivity">
+        </activity>
+        <activity android:name=".business.account.activity.RegisterActivity">
         </activity>
     </application>
 
