--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,14 @@ dependencies {
      * LitePal数据库依赖
      */
     implementation 'org.litepal.android:java:3.0.0'
+
+    /**
+     * Banner轮播图
+     */
+    implementation 'com.youth.banner:banner:1.4.10'
+
+    /**
+     * Glide
+     */
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
