--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,14 @@ dependencies {
      * Glide
      */
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+
+    /**
+     * RecyclerView
+     */
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
+    /**
+     * CardView
+     */
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
