--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,10 @@ dependencies {
      * CardView
      */
     implementation 'com.android.support:cardview-v7:28.0.0'
+
+    /**
+     * CircleImageView
+     */
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
 }
